--- a/myindex.j2
+++ b/myindex.j2
@@ -1,5 +1,5 @@
 <h1>this is my index page</h1>
-<h1> this is my ansible node os is : </h1>
-<h1> this is my ansinble node IP is :</h1>
-<h1> this is my ansible node java package: </h1>
-<h1> what is my webserver package: </h1>
+<h1> this is my ansible node os is : {{ansible_os_family}} </h1>
+<h1> this is my ansinble node IP is : {{ansible_all_ipv4_addresses}}</h1>
+<h1> this is my ansible node java package: {{myjavaonubuntu}}</h1>
+<h1> what is my webserver package: {{myubuntuwebpackage}}</h1>
